# haskell_exercises

./: ch1.md  ch1_answers.md  ch2_answers.md  intro.md  intro_answers.md
ch4/: InteractWith.hs  SplitLines.hs  ch4.md
rhw/: ch1.md  ch2.md
rhw/ch03/: ch3.md
rhw/ch04/: Adler32.hs  Filter.hs  Plus.hs  SuffixTree.hs  Sum.hs
rhw/ch05/: PrettyJSON.hs  SimpleJSON.hs
rhw/ch06/: AutomaticDerivations.hs  ColoredDerived.hs  NaiveEq.hs
rhw/ch07/: Actions.hs  BasicIO.hs  BasicIO2.hs  Return3.hs  ToUpperLazy.hs  ToUpperLazy2.hs  ToUpperLazy5.hs
rhw/ch08/: ElfMagic.hi  ElfMagic.hs  Glob.hs  GlobRegex.hs  HighestClose.hs  SumFile.hs
rhw/ch10/: Chapter10.md  PGM.hs  PGM1.hs  PGM2.hs  PGM3.hs  PNM.hs  PNM2.hs  test.pnm
rhw/ch11/: Prettify2.hs  QC-basics.hs
rhw/ch13/: .funcrecs.hs.swp  association-lists.md  funcrecs.hs  funcrecs2.hs  lookup.hs  passwdmap.hs  passws-al.hs
rhw/ch15/: Chapter15.md  MovieReview.hs  VCard.hs
rhw/ch16/: csv1.hs  csv2.hs
rhw/ch4/: Fold.hs  IntParse.hs  Map.hs  Partial.hs  ch4.md
rhw/ch5/: ch5.md  mypretty.cabal
rhw/ch6/: EqClasses.hs  SimpleClass.hs  ch6.md
rhw/ch6/json/: ClassJSON.hs  ClassJSON.hs~
rhw/ch7/: CallingPure.hs  Return.hs  Return2.hs  TempFile.hs  ToUpper.hs  ToUpperLazy3.hs  ch7.md
